- update szs to 1.36b
- update link for MKWiimm 2014-01 to v2
- update link for MKWiimm 2014-02 to v3
- update link for MKWiimm 2014-04 to v4
- add support for MKWiimm 2014-11
- fixed bug that ${MKWIIMM_GAME_LANG} from ${HOME}/.patchimage.rc
  is not honoured
- only apply wiimmfi patcher for pre 2014 MKWiimm (starting with
  2014 the supplied patcher supports wiimmfi out-of-the-box)

v5.2.0:
- add support for SMN?MI (Midi's Super Mario Wii - Just A Little
  adventure)
- add support for SMN?DU DarkUmbra SMB Anniversary Edition
- add support for SMN?ZA Newer Apocalypse
- add exit code 81 (hack does not support supplied game version)

v5.1.0:
- remove MKWIIMM_GAME_LANG from patchimage.rc (sets the language
  for the patcher only, so not required at all) Thanks @Leseratte
  for the hint.
- fixup debian packaging scripts
- add exit code 69 (wiimmfi failed) and 75 (wrong user-input)
- proper error-code providing and exiting in mario kart wiimm,
  mario kart wiimm font, mario kart wiimm items, wiimmfi mario
  kart and wiimmfi generic modules

v5.0.1:
- fix bug in mario kart wiimm items (did not properly work)

v5.0:
- mario kart wiimm: when choosing all RMCP25 (Fun 2014-04) was
  not build (RMCP06 - RMCP24 were built "only")
- mario kart wiimm items: backup the original common.szs on first
  customization of a game
- mario kart wiimm fonts: support changing font in mario kart

v4.98:
- mario kart wiimm: when building mario kart wiimm from scratch
  use the wiimmfi mario kart patcher, not wiimmfi generic. Also
  some string changes and more detailed info on current step
- supply wit 2.29a and szs 1.35a
- always use supplied tools (don't fallback to system ones)

v4.97:
- changed IDs in the game selection menu (old A..Z for Wii, 1..9
  for ROMs / new <ID>1..<ID>..99 ; example: NSMB1, NSMB2, NSMB3)
- mkwiimm_items: support for exchanging items in Mario Kart Wii
  (your item choices are saved and can be re-used, so if you want