@@ -16,6 +16,7 @@ SMN?10		Koopa Country
 SMN?11		New Super Mario Bros. 4
 SMN?12		Awesomer Super Luigi Mini
 SMN?DU		DarkUmbra Super Mario Bros: Anniversary Edition
+SMN?FL		Newer: Falling Leaf
 SMN?MI		Midi's Super Mario Bros Wii - Just A Little Adventure
 SMN?RV		RVLution Wii (NewSMB Mod)
 SMN?YL		Luigi's Super Yoshi Bros.
